--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,35 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}BricoTravoPro{% endblock %}</title>
+        <title>{% block title %}Vie saine{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
             <link rel="stylesheet" href="{{ asset('css/home.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
         {% endblock %}
     </head>
     <body>
-    {{ include('_navbar.html.twig') }}
-
-    {% for label, messages in app.flashes %}
-        {% for message in messages %}
-            <div class="mt-4 alert alert-{{ label }} alert-dismissible fade show">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        {% endfor %}
-    {% endfor %}
-
-        {% block body %}{% endblock %}
-
-    {{ include('_footer.html.twig') }}
+    {{ include('navbar.twig') }}
+        {% block body %}
+        
+        {% endblock %}
+    {{ include('footer.twig') }}
 
         {% block javascripts %}
-            <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
         {% endblock %}
     </body>
 </html>
