add jquery onclick

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,9 +2,28 @@
 
 {% block body %}
 
- <div class="container-fluid" >
+<div class="container-fluid">
     <div class="app-main-content">
         <p>Bienvenue sur notre site qui, on l'espère, vous aidera à avoir une vie plus "saine" facilement.</p>
+        <div class="card">
+            <img class="lien" src="/Images/Cuisine.png" alt="image cuisine">
+            <div class="container">
+                <h4><b>Cuisine</b></h4>
+            </div>
+        </div>
+        <div class="card">
+            <img class="lien1" src="/Images/DIY.png" alt="image cuisine">
+            <div class="container">
+                <h4><b>DIY</b></h4>
+            </div>
+        </div>
+        <div class="card">
+            <img class="lien2" src="/Images/ecolo.png" alt="image cuisine">
+            <div class="container">
+                <h4><b>Ecolo/Recyclage</b></h4>
+            </div>
+        </div>
     </div>
+</div>
 </div>
 {% endblock %}
