--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,8 +5,9 @@
         <title>{% block title %}Vie saine{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-            <link rel="stylesheet" href="{{ asset('css/home.css') }}">
-            <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
+            <link rel="stylesheet" href="{{ asset('Css/navbar.css') }}">
+            <link rel="stylesheet" href="{{ asset('Css/home.css') }}">
+            
         {% endblock %}
     </head>
     <body>
@@ -17,9 +18,10 @@
     {{ include('footer.twig') }}
 
         {% block javascripts %}
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+            <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+            <script src="{{ asset('JS/script.js') }}"></script>
         {% endblock %}
     </body>
 </html>
