modif navbar + add footer

--- a/templates/Cooking/cooking.twig
+++ b/templates/Cooking/cooking.twig
@@ -8,21 +8,21 @@
         <div class="card">
             <img class="batch_cooking" src="/Images/Cuisine.png" alt="image cuisine">
             <div class="container">
-                <h4><b>Batch_cooking</b></h4>
+                <h4>Batch_cooking</h4>
             </div>
         </div>
 
         <div class="card">
             <img class="recipes" src="/Images/DIY.png" alt="image cuisine">
             <div class="container">
-                <h4><b>Recettes</b></h4>
+                <h4>Recettes</h4>
             </div>
         </div>
 
         <div class="card">
             <img class="recipes_cookeo" src="/Images/ecolo.png" alt="image cuisine">
             <div class="container">
-                <h4><b>Recettes Cookeo</b></h4>
+                <h4>Recettes Cookeo</h4>
             </div>
         </div>
     </div>
