--- a/templates/Recycling/recycling.twig
+++ b/templates/Recycling/recycling.twig
@@ -8,13 +8,13 @@
         <div class="card">
             <img class="re_use" src="/Images/Cuisine.png" alt="image cuisine">
             <div class="container">
-                <h4><b>Ré-utilisation</b></h4>
+                <h4>Ré-utilisation</h4>
             </div>
         </div>
         <div class="card">
             <img class="alternative" src="/Images/DIY.png" alt="image cuisine">
             <div class="container">
-                <h4><b>Recyclage</b></h4>
+                <h4>Recyclage</h4>
             </div>
         </div>
     </div>
