--- a/templates/navbar.twig
+++ b/templates/navbar.twig
@@ -1,10 +1,10 @@
-<nav id="navbar-custom" class="navbar navbar-default navbar-fixed-left">
-<div class="navbar-header">
+<nav id="navbar-custom" class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" id="logo" href="/home">Vie saine</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -35,19 +35,10 @@
           <a class="dropdown-item" href="/re_use">Réutilisation</a>
           <a class="dropdown-item" href="/alternatives">Les alternatives</a>
         </div>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="/qsn">Qui sommes nous ?</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="/contact">Nous contacter</a>
-      </li>
-<form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Recherche" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
-    </form>
-
     </ul>
-    
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Votre recherche" aria-label="recherche">
+      <button class="btn my-2 my-sm-0 search" type="submit">Recherche</button>
+    </form>
   </div>
 </nav>
