--- a/public/Css/home.css
+++ b/public/Css/home.css
@@ -1,13 +1,12 @@
 img {
-    width: 200px;
-    height: 290px;
+    width: 250px;
+    height: 250px;
     border-radius: 5px 5px 0 0;
-
 }
 
 img:hover {
-    width: 240px;
-    height: 350px;
+    width: 290px;
+    height: 290px;
 }
 
 .card {
@@ -15,16 +14,16 @@ img:hover {
     transition: 0.3s;
     border-radius: 5px;
     display: inline-block;
-    width: 21%;
+    width: 25%;
     text-align: center;
 }
 
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     display: inline-block;
-    width: 25%;
+    width: 30%;
 }
 
-.container {
-    padding: 2px 16px;
+.container{
+    text-align: center;
 }
