--- a/templates/DIY/diy.twig
+++ b/templates/DIY/diy.twig
@@ -8,19 +8,19 @@
             <div class="card">
                 <img class="cosmetics" src="/Images/Cuisine.png" alt="image cuisine">
             <div class="container">
-                <h4><b>Cosmétiques</b></h4>
+                <h4>Cosmétiques</h4>
             </div>
             </div>
             <div class="card">
                 <img class="household_product" src="/Images/DIY.png" alt="image cuisine">
                 <div class="container">
-                <h4><b>Produits ménager</b></h4>
+                <h4>Produits ménager</h4>
             </div>
             </div>
             <div class="card">
                 <img class="knitting" src="/Images/ecolo.png" alt="image cuisine">
                 <div class="container">
-                <h4><b>Tricot/couture</b></h4>
+                <h4>Tricot/couture</h4>
             </div>
             </div>
             </div>
