--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="fr">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Vie saine{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
             <link rel="stylesheet" href="{{ asset('Css/navbar.css') }}">
             <link rel="stylesheet" href="{{ asset('Css/home.css') }}">
+            <link rel="stylesheet" href="{{ asset('Css/footer.css') }}">
+            <script src="https://kit.fontawesome.com/297bed5beb.js" crossorigin="anonymous"></script>
             
         {% endblock %}
     </head>
