--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -4,28 +4,67 @@
         <div class="row">
             <div class="col-sm qsn">
                 <h3> Qui sommes nous ? </h3>
-                <p> Je suis une développeuse web qui est également passionnée par le fait maison. <br> Cela a plusieurs utilitées : 
-                <br> - Faire des économies
-                <br> - Etre un peu plus "écolo"
-                <br> - Vivre plus sainement</p>
+                <p> Je suis une développeuse web qui est également passionnée par le fait maison. <br> Cela a plusieurs
+                    utilitées :
+                    <br> - Faire des économies
+                    <br> - Etre un peu plus "écolo"
+                    <br> - Vivre plus sainement</p>
             </div>
+
             <div class="col-sm qsn">
                 <h3>Nous contacter </h3>
-                <p> Formulaire de contact </p>
+                <div class="row">
+                    <div class="col-lg-10 col-lg-offset-1 contact">
+                        <form id="contact-form" method="post" action="" role="form">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <label for="firstname">Prénom <span class="blue">*</span></label>
+                                    <input id="firstname" type="text" name="firstname" class="form-control"
+                                        placeholder="Votre prénom">
+                                    <p class="comments"></p>
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="name">Nom <span class="blue">*</span></label>
+                                    <input id="name" type="text" name="name" class="form-control"
+                                        placeholder="Votre Nom">
+                                    <p class="comments"></p>
+                                </div>
+                                <div class="col-md-12">
+                                    <label for="email">Email <span class="blue">*</span></label>
+                                    <input id="email" type="text" name="email" class="form-control"
+                                        placeholder="Votre Email">
+                                    <p class="comments"></p>
+                                </div>
+                                <div class="col-md-12">
+                                    <label for="message">Message <span class="blue">*</span></label>
+                                    <textarea id="message" name="message" class="form-control"
+                                        placeholder="Votre Message" rows="4"></textarea>
+                                    <p class="comments"></p>
+                                </div>
+                                <div class="col-md-12">
+                                    <p class="blue"><strong>* Ces informations sont requises.</strong></p>
+                                </div>
+                                <div class="col-md-12">
+                                    <input type="submit" class="button1" value="Envoyer">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
+
             <div class="col-sm qsn">
                 <h3> Mentions Légales </h3>
                 <p> Details mentions légales </p>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row logo">
             <div class="col-sm">
                 <div class="flex-center">
-
                     <!-- Facebook -->
                     <a class="fb-ic" href="http://www.facebook.com/">
-                        <i class="fab fa-facebook-f fa-lg mr-md-5 mr-3 fa-2x" aria-hidden="true" > </i>
+                        <i class="fab fa-facebook-f fa-lg mr-md-5 mr-3 fa-2x" aria-hidden="true"> </i>
                     </a>
                     <!-- Twitter -->
                     <a class="tw-ic" href="http://www.twitter.com/">
