--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,26 +4,12 @@
 
 <div class="container">
     <div class="app-main-content">
-        <p>Bienvenue sur notre site qui, on l'espère, vous aidera à avoir une vie plus "saine" facilement.</p>
-        <div class="card">
-            <img class="lien" src="/Images/Cuisine.png" alt="image cuisine">
-            <div class="container">
-                <h4>Cuisine</h4>
-            </div>
-        </div>
-        <div class="card">
-            <img class="lien1" src="/Images/DIY.png" alt="image cuisine">
-            <div class="container">
-                <h4>DIY</h4>
-            </div>
-        </div>
-        <div class="card">
-            <img class="lien2" src="/Images/ecolo.png" alt="image cuisine">
-            <div class="container">
-                <h4>Ecolo/Recyclage</h4>
-            </div>
-        </div>
+        <p class="intro">Bienvenue sur notre site qui, on l'espère, vous aidera à avoir une vie plus "saine" facilement.</p>
     </div>
+
+
+
+
 </div>
 
 {% endblock %}
