--- a/public/Css/home.css
+++ b/public/Css/home.css
@@ -1,29 +1,14 @@
-img {
-    width: 250px;
-    height: 250px;
-    border-radius: 5px 5px 0 0;
+html, body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+body{
+    display: flex;
+    flex-direction: column;
 }
 
-img:hover {
-    width: 290px;
-    height: 290px;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    display: inline-block;
-    width: 25%;
-    text-align: center;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    display: inline-block;
-    width: 30%;
-}
-
-.container{
+.intro{
     text-align: center;
 }
