send mail with php/ajax

--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -18,25 +18,25 @@
                         <form id="contact-form" method="post" action="" role="form">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <label for="firstname">Prénom <span class="blue">*</span></label>
+                                    <label for="firstname">Prénom *</label>
                                     <input id="firstname" type="text" name="firstname" class="form-control"
                                         placeholder="Votre prénom">
                                     <p class="comments"></p>
                                 </div>
                                 <div class="col-md-6">
-                                    <label for="name">Nom <span class="blue">*</span></label>
+                                    <label for="name">Nom *</label>
                                     <input id="name" type="text" name="name" class="form-control"
                                         placeholder="Votre Nom">
                                     <p class="comments"></p>
                                 </div>
                                 <div class="col-md-12">
-                                    <label for="email">Email <span class="blue">*</span></label>
+                                    <label for="email">Email *</label>
                                     <input id="email" type="text" name="email" class="form-control"
                                         placeholder="Votre Email">
                                     <p class="comments"></p>
                                 </div>
                                 <div class="col-md-12">
-                                    <label for="message">Message <span class="blue">*</span></label>
+                                    <label for="message">Message *</label>
                                     <textarea id="message" name="message" class="form-control"
                                         placeholder="Votre Message" rows="4"></textarea>
                                     <p class="comments"></p>
