add button scroll top jQuery

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -7,9 +7,38 @@
         <p class="intro">Bienvenue sur notre site qui, on l'espère, vous aidera à avoir une vie plus "saine" facilement.</p>
     </div>
 
+    <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+ <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+ <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+ <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+ <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+ <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
+   <p> test</p><br>
 
-
-
-</div>
+<div class="cRetour"></div>
+</p>
 
 {% endblock %}
