--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
             <link rel="stylesheet" href="{{ asset('Css/navbar.css') }}">
             <link rel="stylesheet" href="{{ asset('Css/home.css') }}">
             <link rel="stylesheet" href="{{ asset('Css/footer.css') }}">
+            <link rel="stylesheet" href="{{ asset('Css/return.css') }}">
             <script src="https://kit.fontawesome.com/297bed5beb.js" crossorigin="anonymous"></script>
             
         {% endblock %}
@@ -26,6 +27,7 @@
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
             <script src="{{ asset('JS/script.js') }}"></script>
+            <script src="{{ asset('JS/return.js') }}"></script>
         {% endblock %}
     </body>
 </html>
