--- a/templates/Cooking/recipes.twig
+++ b/templates/Cooking/recipes.twig
@@ -4,7 +4,9 @@
 
  <div class="container-fluid" >
     <div class="app-main-content">
-        <p>Recettes</p>
+        <h3>Recettes</h3>
+        <p>Nous n'avons pas la prétention de vous proposer des recettes ou astuces pour maigrir, <br>
+           mais plutôt de vous proposer des solutions pour éviter tous les produits industrialisés.
     </div>
 </div>
 {% endblock %}
